# ravn

./: .clang-format  .dockerignore  .gitignore  .last_version  Dockerfile  LICENSE  MODEL_BUILD.md  Makefile  PROCESS_DETAILS.md  RAVN.md  RAVN_COMPLETE_DOCUMENTATION.md  README.md  RELEASE_GUIDE.md  THREAD_ARCHITECTURE.md  ravn.conf  requirements.txt  setup.sh  test_ebpf.bpf.c
.github/workflows/: daily-ci.yml  package.yml  release.yml
docs/: LOGGING.md  RAVN_COMPLETE_GUIDE.md  RELEASE_TEMPLATE.md
examples/: logger_example  logger_example.c
include/abstraction/: abstraction_event_processor_if.h
include/app/: app_cli_manager_if.h
include/core/: core_agent_if.h  core_execfs_if.h  core_network_if.h  core_security_if.h  core_system_if.h  core_update_checker_if.h  core_vulnerability_if.h  ebpf.h
include/ebpf/: ebpf_program_if.h
include/security/: security_analysis_if.h
include/service/: service_ai_decision_engine_if.h
include/storage/: storage_database_if.h
models/: README.md
models/data/: training_data.json
models/exported/: ravn_model.c  ravn_model.h  ravn_model.h5_weights_info.json  ravn_model_architecture.json  ravn_model_weights_info.json
models/trained/: best_model.h5
ravn-dashboard/: README.md  main.py  requirements.txt  start.sh
ravn-dashboard/frontend/: package-lock.json  package.json
scripts/: ask_model_training.sh  check_network_changes.sh  format_code.sh  release.sh  setup.sh  test_system.sh  version.sh
src/: main.c  ravn.c  version.h  vmlinux.h
src/app/cli/: Cargo.toml
src/app/cli/src/: app_cli_dashboard.rs  app_cli_main.rs
(+91 files in other folders)
