 [package]
name = "ravn-ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ravn-ctl"
path = "src/app_cli_main.rs"

[features]
default = ["tui"]
tui = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "process", "signal", "io-util", "fs", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
which = "5"
ratatui = { version = "0.26" }
crossterm = { version = "0.27" }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.29"


